--- a/api/Gemfile
+++ b/api/Gemfile
@@ -8,6 +8,8 @@ gem "bcrypt", "~> 3.1", ">= 3.1.11"
 gem "tzinfo-data", platforms: %i[windows jruby]
 gem "bootsnap", require: false
 
+gem 'csv'
+
 group :development, :test do
   gem "debug", platforms: %i[ mri windows ]
   gem 'rspec-rails'
