--- a/api/Gemfile
+++ b/api/Gemfile
@@ -20,6 +20,8 @@ group :development, :test do
   gem 'mongoid-rspec'
   gem 'newman'
   gem 'webmock', '~> 3.18', '>= 3.18.1'
+  gem 'rspec-rails', require: false
+  gem 'cucumber-rails', '~> 3.1', '>= 3.1.1', require: false
 end
 
 gem 'mongoid'
