Configuração do Github Actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,38 @@ services:
       - ./api:/api
     env_file:
       - .env
+
+  test-runner:
+    build:
+      context: .
+    command: bash -c "bundle exec rspec && bundle exec cucumber"
+    volumes:
+      - ./api:/api
+      - coverage_data:/api/coverage
+    env_file:
+      - .env
+    depends_on:
+      - api
+
+  sonar:
+    image: sonarsource/sonar-scanner-cli:latest
+    volumes:
+      - ./api:/api
+      - coverage_data:/api/coverage
+    env_file:
+      - .env
+    depends_on:
+      - api
+    command: >
+      sonar-scanner 
+      -Dsonar.projectKey=my_project 
+      -Dsonar.organization=my_org 
+      -Dsonar.host.url=https://sonarcloud.io 
+      -Dsonar.sources=app 
+      -Dsonar.tests=spec,features 
+      -Dsonar.exclusions=spec/**,features/** 
+      -Dsonar.coverage.exclusions="spec/**,features/**"
+      -Dsonar.ruby.coverage.reportPaths=/api/coverage/coverage.xml
+
+volumes:
+  coverage_data:
