--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ MONGO_PORT=27017
 API_CLIENTE=https://api_cliente_url_here
 API_ESTOQUE=https://api_estoque_url_here
 API_PEDIDO=https://api_pedido_url_here
+SONAR_TOKEN=sonar_token_here
