--- a/api/Gemfile
+++ b/api/Gemfile
@@ -12,16 +12,19 @@ gem 'csv'
 
 group :development, :test do
   gem "debug", platforms: %i[ mri windows ]
-  gem 'rspec-rails'
+  gem 'rspec-rails', require: false
   gem 'shoulda-matchers'
   gem 'factory_bot_rails'
   gem 'faker'
-  gem 'simplecov', require: false
   gem 'mongoid-rspec'
   gem 'newman'
-  gem 'webmock', '~> 3.18', '>= 3.18.1'
-  gem 'rspec-rails', require: false
+  gem 'webmock', '~> 3.18', '>= 3.18.1'  
   gem 'cucumber-rails', '~> 3.1', '>= 3.1.1', require: false
+end
+
+group :test do
+  gem 'simplecov', require: false
+  gem 'simplecov-cobertura', require: false
 end
 
 gem 'mongoid'
